--- a/app/composer.json
+++ b/app/composer.json
@@ -2,7 +2,7 @@
     "name": "victorlobo92/compress-images",
     "description": "Compress your images without losing quality",
     "minimum-stability": "stable",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "homepage": "https://github.com/victorlobo92/compress-images",
     "license": "MIT",
     "type": "library",
@@ -21,5 +21,8 @@
         "classmap": [
             "src"
         ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
