--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,14 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ./app:/var/www/html
+
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: docusign-nginx
+  #   volumes:
+  #     - ./vhost.conf:/etc/nginx/conf.d/default.conf
+  #     - ./:/var/www/html
+  #   links:
+  #     - php
+  #   ports:
+  #     - "8080:80"
