--- a/compress-images/package.json
+++ b/compress-images/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "test": "php artisan test --env=testing --testsuite=Unit --stop-on-failure"
     },
     "devDependencies": {
         "axios": "^0.21",
