--- a/compress-images/.env.testing
+++ b/compress-images/.env.testing
@@ -51,5 +51,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SEARCH_FILES_FOLDER="compress"
-COMPRESSED_FILES_FOLDER="compressed"
+SEARCH_FILES_FOLDER="tests/compress"
+COMPRESSED_FILES_FOLDER="tests/compressed"
