Remove real heavy image and change environment variable to pretend file is big

--- a/compress-images/.env.testing
+++ b/compress-images/.env.testing
@@ -53,3 +53,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SEARCH_FILES_FOLDER="tests/compress"
 COMPRESSED_FILES_FOLDER="tests/compressed"
+MAX_FILE_SIZE_MB=10
